make sure all letter spacing has -marginrig to ensure centered and changed services

--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -54,6 +54,7 @@ button:focus {
 h2 {
     text-transform: uppercase;
     letter-spacing: 0.2em;
+    margin-right: -0.2em;
     font-family: $font-familyReg;
     font-weight: 400;
 }
