--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -22,12 +22,15 @@
     color: black;
     letter-spacing: 0.4em;
     text-transform: uppercase;
+    margin-right: -0.4em;
 }
 
 .navbar-shrink.navbar-light .navbar-nav .nav-link {
     display: block;
     color: black;
     letter-spacing: 0.3em;
+    margin-right: -0.3em;
+
 }
 
 .nav-item {
