--- a/src/app/components/skills/skills.component.scss
+++ b/src/app/components/skills/skills.component.scss
@@ -25,6 +25,8 @@ h2 {
   letter-spacing: 0.2em;
   font-family: $font-familyReg;
   font-weight: 400;
+  margin-right: -0.2em;
+
 }
 
 .circle {
