--- a/src/assets/themes/grayscale.css
+++ b/src/assets/themes/grayscale.css
@@ -28,7 +28,10 @@ h6 {
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
+    margin-right: -1px;
+
 }
+
 
 p {
     margin: 0 0 25px;
@@ -127,6 +130,8 @@ a:focus {
         padding: 20px 0;
         border-bottom: none;
         letter-spacing: 1px;
+        margin-right: -1px;
+
         background: transparent;
         -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
         -moz-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
